# FHIR Gateway Module
# Provides FHIR R4 REST API for modern EHR integration.
#
# See: docs/SDS_COMPONENTS.md - Section 3: FHIR Gateway Module
# See: https://github.com/kcenon/pacs_bridge/issues/31

set(FHIR_SOURCES
    # Placeholder - implementation pending
    # fhir_types.cpp
    # fhir_resource.cpp
    # fhir_server.cpp
)

# Library will be added when implementation is complete
# add_library(pacs_bridge_fhir STATIC ${FHIR_SOURCES})
