# Integration Module
# Provides adapters for common_system libraries (network, thread, logger).
#
# See: docs/SDS_COMPONENTS.md - Section 8: Integration Module

set(INTEGRATION_SOURCES
    # Placeholder - implementation pending
    # network_adapter.cpp
    # thread_adapter.cpp
    # logger_adapter.cpp
)

# Library will be added when implementation is complete
# add_library(pacs_bridge_integration STATIC ${INTEGRATION_SOURCES})
